<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:fadingEdge="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
    >
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/proposal_pane_state"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/proposal_pane_state"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/proposal_pane_dueDate"
                android:layout_gravity="center"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/proposal_pane_date"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
            <TextView
                android:id="@+id/proposal_pane_time"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/proposal_pane_quantity"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/proposal_pane_quantity"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/proposal_pane_price"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/proposal_pane_price"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:text="@string/proposal_pane_total"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/proposal_pane_total"
                android:layout_width="wrap_content"
                android:layout_height="30dip"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposal_pane_criteria"
            android:textColor="@color/property_name"
                android:textSize="14dip"
        />
        <TextView
            android:id="@+id/proposal_pane_criteria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="50dip"
            android:paddingRight="10dip"
            android:textColor="@color/property_value"
            android:textSize="16dip"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proposal_pane_store"
            android:textColor="@color/property_name"
            android:textSize="14dip"
        />
        <TextView
            android:id="@+id/proposal_pane_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dip"
            android:paddingRight="10dip"
            android:textColor="@color/property_value"
            android:textSize="16dip"
        />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/proposal_pane_previous_button"
                android:text="@string/proposal_pane_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
            />
            <Button
                android:id="@+id/proposal_pane_confirm_button"
                android:text="@string/confirm_proposal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
            />
            <Button
                android:id="@+id/proposal_pane_decline_button"
                android:text="@string/decline_proposal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
            />
            <Button
                android:id="@+id/proposal_pane_next_button"
                android:text="@string/proposal_pane_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_weight="1"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
