<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:fadingEdge="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
    >
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_region"
                android:layout_gravity="center"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <Spinner
                android:id="@+id/demand_pane_region"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/demand_pane_region_prompt"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_range"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <EditText
                android:id="@+id/demand_pane_range"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="25"
                android:inputType="numberDecimal"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_range_unit_km"
                android:paddingLeft="10dip"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_dueDate"
                android:layout_gravity="center"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <TextView
                android:id="@+id/demand_pane_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
            <ImageButton
                android:id="@+id/demand_pane_pick_date_button"
                android:src="@drawable/calendar"
                android:layout_height="wrap_content"
                android:layout_width="32dip"
                android:layout_gravity="center"
                android:paddingRight="10dip"
            />
            <TextView
                android:id="@+id/demand_pane_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:ellipsize="start"
                android:layout_gravity="center"
                android:textColor="@color/property_value"
                android:textSize="16dip"
            />
            <ImageButton
                android:id="@+id/demand_pane_pick_time_button"
                android:src="@drawable/clock"
                android:layout_height="wrap_content"
                android:layout_width="32dip"
                android:paddingRight="10dip"
                android:inputType="number"
            />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_quantity"
                android:paddingRight="10dip"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <EditText
                android:id="@+id/demand_pane_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:ellipsize="start"
                android:inputType="number"
                android:textSize="16dip"
            />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:text="@string/demand_pane_criteria"
            android:textColor="@color/property_name"
            android:textSize="14dip"
        />
        <EditText
            android:id="@+id/demand_pane_criteria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
        />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demand_pane_cc"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/property_name"
                android:textSize="14dip"
            />
            <ImageButton
                android:id="@+id/demand_pane_get_contact_address"
                android:src="@drawable/group"
                android:layout_height="wrap_content"
                android:layout_width="32dip"
                android:layout_gravity="center|right"
                android:paddingRight="10dip"
            />
        </LinearLayout>
        <EditText
            android:id="@+id/demand_pane_cc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
        />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/demand_pane_update_button"
                android:text="@string/update_demand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
            <Button
                android:id="@+id/demand_pane_see_proposals_button"
                android:text="@string/demand_pane_see_proposals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
